# projeto_data_cloud

./: .gitignore  README.md  main.tf  pyproject.toml  terraform.tfstate  terraform.tfstate.backup
